# reddit2video

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  generation_config.yaml  media_node_master_prompt_ru.md  pyproject.toml
config/: girly_scene_registry.json  girly_static_v5_posts_4.json
prompts/: gemini_video_design_audit_v1.md  voiceover_storyboard_master_v3.md  voiceover_storyboard_runtime_batch_v3.md  voiceover_storyboard_runtime_single_v3.md
remotion/: package-lock.json  package.json  remotion.config.ts
scripts/: annotate_layout_vfx_timings.py  build_publication_manifest.py  build_publication_readiness_report.py  collect_reddit_wellness_24h.py  download_selected_storyboard_assets.py  evaluate_art_direction_gemini.py  evaluate_video_quality_gemini.py  filter_reddit_source_quality.py  gemini_batch_experiment.py  gemini_html_layout_experiment.py  gemini_scene_repair_experiment.py  girly_static_v5_to_remotion_html_payload.py  heygen_cookie_header_to_storage_state.py  heygen_internal.py  html_word_timing_experiment.py  inspect_render_av_integrity.py  inspect_render_visual_smoke.py  inspect_video_publishability.py  render_girly_static_v5_html.py  repair_media_resolver_dedupe.py  repair_media_resolver_with_ai_images.py  repair_pronunciation_gemini.py  run_gemini_quality_oracle_batch.py  run_girly_static_v5_flow.py  smoke_reddit_20.py  watch_heygen_auth_cookies.py
tests/: test_download_selected_storyboard_assets.py  test_evaluate_video_quality_gemini_prompt.py  test_gemini_env_auth.py  test_gemini_quality_oracle_batch.py  (+21 more)
(+54 files in other folders)
