[project]
name = "reddit2video"
version = "0.1.0"
description = "Node-based Reddit-to-video pipeline playground."
requires-python = ">=3.9"
dependencies = [
    "aiokafka>=0.12.0",
    "fastapi>=0.115.0",
    "google-auth>=2.0.0",
    "google-genai>=2.7.0",
    "httpx[socks]>=0.28.0",
    "Jinja2>=3.1.0",
    "Pillow>=10.0.0",
    "playwright>=1.59.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
reddit2video = "reddit2video.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
